<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:contentDescription="@string/backgroundImage"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg" />

        <LinearLayout
            android:id="@+id/InfoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dashboardLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timeLabelTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/timeText"
                        android:textColor="@android:color/black"
                        android:textSize="46sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/timeTv"
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="end"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="46sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/scoreLabelTv"
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/scoreText"
                        android:textColor="@android:color/black"
                        android:textSize="46sp"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/scoreTv"
                        style="@style/Widget.AppCompat.TextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-smallcaps"
                        android:gravity="end"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="46sp"
                        android:textStyle="bold"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/congratsIv"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/winningImage"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:srcCompat="@drawable/win" />

            <TextView
                android:id="@+id/congratsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/winText"
                android:textColor="@android:color/black"
                android:textSize="46sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/replayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/tryAgainText"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainMenuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/mainMenuText"
                android:visibility="gone" />

            <GridView
                android:id="@+id/gridViewGame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="4"
                android:stretchMode="spacingWidthUniform"
                android:verticalSpacing="20dp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>